--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.0",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-elements": "^3.4.2",
