--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "expo-status-bar": "~1.4.4",
     "formik": "^2.4.0",
     "jwt-decode": "^3.1.2",
+    "luxon": "^3.3.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-elements": "^3.4.2",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
