--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-av": "^13.2.1",
     "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "^12.1.1",
     "formik": "^2.4.0",
     "jwt-decode": "^3.1.2",
     "luxon": "^3.3.0",
