--- a/app.json
+++ b/app.json
@@ -16,6 +16,8 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "es.tincode.tiktok",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
